Add multi-theme system, custom license, and enhanced features
- Implemented 3-theme system: Dark, Dutch Masters (Vermeer-inspired), Nordic Bright
- Added interactive theme toggle button in top-right corner with data-attribute approach
- Fixed theme switching with proper client-side hydration and SSR compatibility
- Created custom non-commercial license with commercial licensing option
- Updated package.json with proper author, repository, and license information
- Enhanced README with new features, license details, and commercial contact info
- Added comprehensive USER_GUIDE.md for non-technical users
- Improved overall user experience with theme persistence and smooth transitions

Commercial inquiries: harshameghadri@gmail.com
LinkedIn: linkedin.com/in/harshameghadri

With guidance from my coding mentor

--- a/package.json
+++ b/package.json
@@ -1,7 +1,30 @@
 {
   "name": "dashboard-of-failures",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "SEE LICENSE.md",
+  "author": {
+    "name": "Harsha Meghadri",
+    "email": "harshameghadri@gmail.com",
+    "url": "https://linkedin.com/in/harshameghadri"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/harshameghadri/dashboard-of-failures"
+  },
+  "homepage": "https://github.com/harshameghadri/dashboard-of-failures",
+  "description": "A beautiful, professional job application tracking dashboard with Google Sheets integration. Features multiple themes, real-time countdown, and comprehensive analytics.",
+  "keywords": [
+    "job-tracker",
+    "job-applications",
+    "dashboard",
+    "nextjs",
+    "typescript",
+    "google-sheets",
+    "tailwindcss",
+    "recruitment",
+    "career-tracker"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
